--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+build/*
+build-debug/*
+*swp
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+Makefile
+compile_commands.json
+
 # Prerequisites
 *.d
 
