--- a/libraries/types/CMakeLists.txt
+++ b/libraries/types/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-file(GLOB HEADERS  "include/eos/types/*.hpp")
+file(GLOB HEADERS  "${CMAKE_CURRENT_SOURCE_DIR}/include/eos/types/*.hpp")
 
 add_definitions(-DBOOST_PP_VARIADICS)
 
