Major refactoring (for EOSIO/eos#354):  * `types_constructor` now creates two different versions of types managers:    - One is a minimal one, `types_manager`, which has just what will be needed by      EOS.IO to compare objects and make dynamic tables work on the platform side.    - The other is the full one, `full_types_manager`, which has enough information      to do serialization/deserialization between raw data and C++ types, as well as      serialization/deserialization between raw data and JSON (to be implemented later).  * Both versions have a lot of common functionality, and this functionality is    contained in the class `types_manager_common` which both versions inherit.  * The C++ contract code would need a types manager version that has all struct fields    (which `types_manager` does not) rather than just the sorted fields. Right now that    is `full_types_manager` but it also includes extra information that are not needed    for serialization/deserialization between raw data and C++ types and so it is    information that the C++ contract code would presumably not need (such as field names).    I am considering adding a third (middleground) version of types manager to be    used exclusively by the C++ contract code. Maybe this third version will be very    different in implementation than the other two (perhaps the source might even be    automatically generated by a tool) in order to satisfy the stricter programming    constraints imposed by the WebAssembly environment.

--- a/libraries/types/CMakeLists.txt
+++ b/libraries/types/CMakeLists.txt
@@ -8,7 +8,9 @@ add_library( eos_types
              raw_region.cpp 
              type_id.cpp 
              field_metadata.cpp 
+             types_manager_common.cpp
              types_manager.cpp 
+             full_types_manager.cpp
              abi_constructor.cpp 
              types_constructor.cpp 
              ${HEADERS} 
